syntax = "proto3";

package proto;

option go_package = "./;proto";

message PojokNostalgia{
  AetherDivide aether_divide = 1;//以太战线
}

/********************以太战线********************/

message AetherDivide {
  map<uint32, AetherDivideAvatarInfo> avatar_list = 1;// 角色信息
  map<uint32, AetherDivideLineup> lineup = 2; // 队伍信息
  map<uint32, AetherSkill> aether_skill_list = 3;// 道具列表
}

message AetherDivideAvatarInfo {
  uint32 avatar_id = 1;
  uint32 promotion = 2; // 突破等级
  map<uint32, uint32> passive_skill = 3; // 装备道具
  //  uint32 exp = 4;
  uint32 cur_sp = 5;
  uint32 max_sp = 6;
}

message AetherDivideLineup {
  uint32 index = 1;//序号
  repeated uint32 avatar_list = 2;// 角色列表
}

message AetherSkill {
  uint32 item_id = 1;// id
  uint32 num = 2;// 数量
  uint32 dress_avatar_id = 3;// 装备角色
}

/********************分割线********************/